--- a/frontend/src/app/components/pages/eye-tests/visual-acuity-test/visual-acuity-test.component.html
+++ b/frontend/src/app/components/pages/eye-tests/visual-acuity-test/visual-acuity-test.component.html
@@ -8,6 +8,7 @@
     
     <!-- Instructions for Visual Acuity Test -->
     <div class="card-container text-center">
+      <h1 class="card-container title">Visual Acuity Test</h1>
       <h2>Instructions:</h2>
       <p>
         Please start the conversation with the patient to understand more
