--- a/frontend/src/app/components/partials/navbars/navbar-userscore/navbar-userscore.component.html
+++ b/frontend/src/app/components/partials/navbars/navbar-userscore/navbar-userscore.component.html
@@ -16,7 +16,7 @@
       </li>
       <li class="nav-link pl-0 text-nowrap active">
         <a routerLink="/user-case-study-correct-vs-oncorrect"
-          ><i class="fa fa-bullseye fa-fw"></i>User Test Percentages Across Case Studies</a
+          ><i class="fa fa-bullseye fa-fw"></i>Average Correct & Incorrect Answers</a
         >
       </li>
       <li class="nav-link pl-0 text-nowrap active">
